Fixed dark mode toggle off right on large screens

--- a/src/css/components/_header.scss
+++ b/src/css/components/_header.scss
@@ -45,7 +45,7 @@
     position: absolute;
     top: 0.5em;
     //right: 1em;
-    left: calc(100vw - 2.5em);
+    left: calc(100vw - 3em);
     color: var(--alternate-colour);
     background-color: transparent;
     border: 0;
